--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.39",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
