--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^9.1.3",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
