--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
@@ -23,6 +24,7 @@
     "antd": "^5.19.2",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "cloudinary": "^2.4.0",
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "postcss": "^8.4.39",
